--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ a {
   margin-right: auto;
 }
 
-section{
+.section{
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -61,10 +61,13 @@ section{
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-right: 93px;
 }
 .logo-header {
   color: var(--main-text-color);
-  margin-right: 93px;
+ 
 }
 /* site-nav */
 .navigation-list{
@@ -129,7 +132,8 @@ section{
 .hero {
   background-color: #2f303a;
   text-align: center;
-
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 .hero-title {
   color: var(--white-color);
@@ -138,11 +142,11 @@ section{
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  padding-top: 200px;
-  padding-right: 252px;
-  padding-bottom: 280 px;
-  padding-left: 252px;
+  width: 696px;
+  margin-top: 0;
+  margin-right: auto;
   margin-bottom: 30px;
+  margin-left: auto;
 }
 .button {
   cursor: pointer;
@@ -153,12 +157,11 @@ section{
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  text-align: center;
   letter-spacing: 0.06em;
   border-radius: 4px;
-  min-width: 200px;
-  min-height: 50px;
-  margin-bottom: 200px;
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: none;
 }
 
 /* features */
@@ -167,14 +170,15 @@ section{
   display: flex;
 }
 
-.set-features > .item{
-  margin-left: 30px;
+.features-item{
+  margin-right: 30px;
   width: 270px;
 }
 
-.features-title {
-  font-size: 0px;
+.features-item:last-child{
+  margin-right: 0;
 }
+
 
 .features h3 {
   font-weight: 700;
@@ -192,6 +196,10 @@ section{
 }
 
 /* directions */
+
+.directions.section{
+  padding-top: 0;
+}
 .directions-title {
   font-weight: 700;
   font-size: 36px;
@@ -207,8 +215,12 @@ section{
   display: flex;
 }
 
-.set-directions > .item{
+.directions-item{
   margin-right: 30px;
+}
+
+.directions-item:last-child{
+  margin-right: 0;
 }
 /* team */
 
@@ -224,6 +236,8 @@ section{
 .team-item{
   background-color: var(--white-color);
   margin-right: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 
 .team-item:last-child{
@@ -238,22 +252,24 @@ section{
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
+  margin-bottom: 50px;
+}
+
+.team-description{
+  margin: 30px auto;
+}
+.team-name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .team-text {
   color: var(--second-color-text);
   font-size: 16px;
   line-height: 1.19;
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.team-name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  margin-bottom: 10px;
-  margin-top: 30px;
   text-align: center;
 }
 
@@ -274,19 +290,43 @@ section{
   margin-top: 20px;
 }
 
-.contacts-footer p {
+.link.link-street {
   color: var(--white-color);
-  margin-bottom: 9px;
 }
 
 .contacts-footer a {
   color: rgba(255, 255, 255, 0.6);
+}
+
+.list .link:hover,
+.list .link:focus {
+  color: var(--accent-color);
+}
+
+.footer-item{
   margin-bottom: 9px;
 }
 
+.footer-item:last-child{
+  margin-bottom: 0;
+}
 /* site portfolio */
-.works-title {
-  font-size: 0px;
+header{
+  border: 1px solid #ECECEC;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .portfolio-nav .link {
@@ -312,6 +352,11 @@ section{
   background-color: var(--accent-color);
 }
 
+.work-description{
+  padding: 20px 24px;
+  border: 1px solid #EEEEEE;
+  border-top: none;
+}
 .works h2 {
   color: var(--main-text-color);
   font-weight: 700;
@@ -319,15 +364,11 @@ section{
   line-height: 2;
   letter-spacing: 0.06em;
   margin-bottom: 4px;
-  margin-top: 20px;
-  margin-left: 24px;
 }
 .works p {
   color: var(--second-color-text);
   font-size: 16px;
   line-height: 1.88;
-  margin-left: 24px;
-  margin-bottom: 20px;
 }
 
 .button-list {
@@ -349,12 +390,14 @@ section{
     flex-wrap: wrap;
   }
   .work-item{
-    border: 1px solid #EEEEEE;
     width: calc((100% - 60px) / 3);
     margin-right: 30px;
     margin-bottom: 30px;
-    cursor: pointer;
   }
   .work-item:nth-child(3n) {
     margin-right: 0;
   }
+
+  .work-item:nth-last-child(-n+3) {
+    margin-bottom: 0px;
+    }
